--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-xs-12 col-xm-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 text-center">
-           <img id="clue" src="" width="500" height="auto"/>
+           <img id="clue" src="" width="100%" height="100%"/>
         </div>
       </div>
 
