--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Adivina la película</h1>
+        <h1>Adivina <span id="type"></span></h1>
       </div>
     </div>
 
@@ -46,7 +46,7 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-xs-12 col-xm-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 text-center">
-           <img id="clue" src="" width="100%" height="100%"/>
+           <img id="image" src="" width="100%" height="100%"/>
         </div>
       </div>
 
