--- a/index.html
+++ b/index.html
@@ -17,11 +17,23 @@
 				font-size: 22px;
 				letter-spacing: 3px;
 			}
+			
+			canvas {
+				image-rendering: optimizeSpeed;
+				image-rendering: -moz-crisp-edges;
+				image-rendering: -webkit-optimize-contrast;
+				image-rendering: -o-crisp-edges;
+				image-rendering: crisp-edges;
+				-ms-interpolation-mode: nearest-neighbor;
+			}
+  
         </style>
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+		<script>
+		</script>
     </head>
     <body>
 	
@@ -46,7 +58,8 @@
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-xs-12 col-xm-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 text-center">
-           <img id="image" src="" width="100%" height="100%"/>
+			<canvas id="image"></canvas>
+           <!--img id="image" src="" width="100%" height="100%"/-->
         </div>
       </div>
 
