--- a/index.html
+++ b/index.html
@@ -26,7 +26,13 @@
 				image-rendering: crisp-edges;
 				-ms-interpolation-mode: nearest-neighbor;
 			}
-  
+			.jumbotron {
+				padding-top: 5px;
+				padding-bottom: 5px;
+			}
+			body {
+				padding-top: 20px;
+			}
         </style>
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
@@ -36,10 +42,7 @@
 		</script>
     </head>
     <body>
-	
-	
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
         <h1>Adivina <span id="type"></span></h1>
@@ -47,24 +50,18 @@
     </div>
 
     <div class="container">
-      <!-- Example row of columns -->
       <div class="row">
         <div class="col-xs-12 col-xm-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 text-center">
           <pre id="solution"></pre>
         </div>
-      </div
-	  
-    <div class="container">
-      <!-- Example row of columns -->
+      </div>
       <div class="row">
         <div class="col-xs-12 col-xm-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 text-center">
 			<canvas id="image"></canvas>
-           <!--img id="image" src="" width="100%" height="100%"/-->
         </div>
       </div>
-
-      <hr>
-    </div> <!-- /container -->        <script src="js/vendor/jquery-3.2.1.min.js"></script>
+    </div>      
+        <script src="js/vendor/jquery-3.2.1.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
         <script src="js/vendor/bootstrap.min.js"></script>
