Build con más opciones en el desplegable de tipo

--- a/build.html
+++ b/build.html
@@ -69,13 +69,16 @@
         </div>
         <div class="col-lg-8">
           <input type="text" id="type" placeholder="Ver desplegable" size="40" list="types">
-			<datalist id="types">
-				<option value="el actor">
-				<option value="el personaje y la película">
-				<option value="la actriz">
-				<option value="la película">
-				<option value="la serie">
-			</datalist>
+					<datalist id="types">
+						<option value="el actor">
+						<option value="el director">
+						<option value="el personaje">
+						<option value="el personaje y la película">
+						<option value="la actriz">
+						<option value="la directora">
+						<option value="la película">
+						<option value="la serie">
+					</datalist>
         </div>
       </div>
 
