--- a/pixelate.html
+++ b/pixelate.html
@@ -24,7 +24,7 @@
       </div>
     </div>
 
-    <div id="containerClapperboard" class="container">
+    <div id="containerClapperboard" class="container" style="display:none">
       <div class="row">
         <div class="col-xs-offset-2 col-xs-8 col-xm-offset-2 col-xm-8 col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4 text-center">
           <svg id="clapperboard" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 15.222 15.222" style="enable-background:new 0 0 15.222 15.222;" xml:space="preserve">
@@ -54,7 +54,7 @@
         </div>
       </div>
     </div>
-    
+
     <div id="containerGame" class="container" style="display:none">
       <div class="row">
         <div class="col-xs-12 col-xm-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 text-center">
