Modificación del ancho (al máximo) del countdown

--- a/pixelate.html
+++ b/pixelate.html
@@ -37,7 +37,7 @@
 
     <div id="containerCountDown" class="container" style="display:none">
       <div class="row">
-        <div class="col-xs-offset-2 col-xs-8 col-xm-offset-2 col-xm-8 col-md-offset-3 col-md-6 col-lg-offset-2 col-lg-8 text-center animatedFlicker">
+        <div class="col-lg-12 text-center animatedFlicker">
           <svg id="film-countdown" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
       					 viewBox="0 0 400 200" style="enable-background:new 0 0 400 200;" xml:space="preserve">
     				<rect class="rectangle01" x="0" y="0" width="400" height="200"/>
