--- a/pixelate.html
+++ b/pixelate.html
@@ -18,7 +18,7 @@
     </head>
     <body>
 
-    <div class="jumbotron">
+    <div id="containerGuess" class="jumbotron">
       <div class="container">
         <h1>Adivina <span id="type"></span></h1>
       </div>
