--- a/pixelate.html
+++ b/pixelate.html
@@ -61,7 +61,7 @@
           <pre id="solution"></pre>
         </div>
       </div>
-      <div class="row">
+      <div class="row" id="div_image">
         <div class="col-xs-12 col-xm-12 col-md-offset-2 col-md-8 col-lg-offset-3 col-lg-6 text-center">
 			<canvas id="image"></canvas>
         </div>
