--- a/pixelate.html
+++ b/pixelate.html
@@ -18,6 +18,7 @@
     </head>
     <body>
 
+    <div id="wrapper">
     <div id="containerGuess" class="jumbotron">
       <div class="container">
         <h1>Adivina <span id="type"></span></h1>
@@ -66,6 +67,7 @@
 			<canvas id="image"></canvas>
         </div>
       </div>
+    </div>
     </div>
 
         <script src="js/vendor/jquery-3.2.1.min.js"></script>
